--- a/simple-blueprint.yaml
+++ b/simple-blueprint.yaml
@@ -7,100 +7,42 @@ imports:
   - http://www.getcloudify.org/spec/cloudify/4.3.2/types.yaml
   - plugin:cloudify-openstack-plugin
 
+  - inputs/openstack_inputs.yaml
+  - inputs/inputs.yaml
+
 inputs:
-
-  username:
-    description: OS_USERNAME as specified in Openstack RC file.
-    default: { get_secret: keystone_username }
-
-  password:
-    description: Openstack user password.
-    default: { get_secret: keystone_password }
-
-  tenant_name:
-    description: OS_TENANT_NAME as specified in Openstack RC file.
-    default: { get_secret: keystone_tenant_name }
-
-  auth_url:
-    description: OS_AUTH_URL as specified in Openstack RC file.
-    default: { get_secret: keystone_url }
-
-  region:
-    description: OS_REGION_NAME as specified in Openstack RC file.
-    default: { get_secret: keystone_region }
-
-  external_network_name:
-    description: Openstack tenant external network name.
 
   nameservers:
     default: [8.8.4.4, 8.8.8.8]
 
-  public_subnet_cidr:
-    default: 10.10.0.0/24
-
-  public_subnet_allocation_pools:
-    default:
-    - start: 10.10.0.2
-      end: 10.10.0.254
+  # public_subnet_cidr:
+  #   default: 10.10.90.0/24
+  #
+  # public_subnet_allocation_pools:
+  #   default:
+  #   - start: 10.10.90.52
+  #     end: 10.10.90.254
 
   private_subnet_cidr:
-    default: 10.10.1.0/24
+    default: 10.10.91.0/24
 
   private_subnet_allocation_pools:
     default:
-    - start: 10.10.1.2
-      end: 10.10.1.254
+    - start: 10.10.91.52
+      end: 10.10.91.254
 
 dsl_definitions:
 
   client_config: &client_config
-    username: { get_input: username }
-    password: { get_input: password }
-    tenant_name: { get_input: tenant_name }
-    auth_url: { get_input: auth_url }
+    username: { get_input: keystone_username }
+    password: { get_input: keystone_password }
+    auth_url: { get_input: keystone_url }
+    user_domain_name: { get_input: keystone_user_domain_name }
+    project_name: { get_input: keystone_project_name }
+    project_domain_name: { get_input: keystone_project_domain_name }
     region: { get_input: region }
 
 node_templates:
-
-  external_network:
-    type: cloudify.openstack.nodes.Network
-    properties:
-      openstack_config: *client_config
-      use_external_resource: true
-      resource_id: { get_input: external_network_name }
-
-  public_network:
-    type: cloudify.openstack.nodes.Network
-    properties:
-      openstack_config: *client_config
-
-  private_network:
-    type: cloudify.openstack.nodes.Network
-    properties:
-      openstack_config: *client_config
-
-  public_network_router:
-    type: cloudify.openstack.nodes.Router
-    properties:
-      openstack_config: *client_config
-    relationships:
-    - type: cloudify.relationships.connected_to
-      target: external_network
-
-  public_subnet:
-    type: cloudify.openstack.nodes.Subnet
-    properties:
-      openstack_config: *client_config
-      subnet:
-        ip_version: 4
-        cidr: { get_input: public_subnet_cidr }
-        dns_nameservers: { get_input: nameservers }
-        allocation_pools: { get_input: public_subnet_allocation_pools }
-    relationships:
-    - type: cloudify.relationships.contained_in
-      target: public_network
-    - type: cloudify.openstack.subnet_connected_to_router
-      target: public_network_router
 
   private_subnet:
     type: cloudify.openstack.nodes.Subnet
@@ -116,6 +58,56 @@ node_templates:
       target: private_network
     - type: cloudify.openstack.subnet_connected_to_router
       target: public_network_router
+
+  private_network:
+    type: cloudify.openstack.nodes.Network
+    properties:
+      openstack_config: *client_config
+
+  #-----------------------------------------------------------------------------
+
+  public_subnet:
+    type: cloudify.openstack.nodes.Subnet
+    properties:
+      openstack_config: *client_config
+      use_external_resource: true
+      resource_id: { get_input: public_subnet_name }
+      # subnet:
+      #   ip_version: 4
+      #   cidr: { get_input: public_subnet_cidr }
+      #   dns_nameservers: { get_input: nameservers }
+      #   allocation_pools: { get_input: public_subnet_allocation_pools }
+    relationships:
+    - type: cloudify.relationships.contained_in
+      target: public_network
+    - type: cloudify.openstack.subnet_connected_to_router
+      target: public_network_router
+
+  public_network:
+    type: cloudify.openstack.nodes.Network
+    properties:
+      openstack_config: *client_config
+      use_external_resource: true
+      resource_id: { get_input: public_network_name }
+
+  public_network_router:
+    type: cloudify.openstack.nodes.Router
+    properties:
+      openstack_config: *client_config
+      use_external_resource: true
+      resource_id: { get_input: public_router_name }
+    relationships:
+      - type: cloudify.relationships.connected_to
+        target: external_network
+
+  external_network:
+    type: cloudify.openstack.nodes.Network
+    properties:
+      openstack_config: *client_config
+      use_external_resource: true
+      resource_id: { get_input: external_network_name }
+
+  #-----------------------------------------------------------------------------
 
 outputs:
 
